--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: "3.8"
 services:
-  amazonclone:
+  web:
     image: node:18
     working_dir: /app
     volumes:
       - ./:/app
-      - /app/node_modules
+      - /app/node_modules   # keep node_modules in container only
+      - /app/package-lock.json   # override to container-only
     ports:
-      - 3000:3000
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 3000"
-    
+      - "3000:3000"
+    command: sh -c "npm install --legacy-peer-deps && npm run dev"
