--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,11 @@ version: "3.8"
 
 services:
   web:
-    image: node:18
+    image: node:18-alpine
     working_dir: /app
     volumes:
       - ./:/app
-      - /app/node_modules
-      - ./package-lock.json:/app/package-lock.json
+      - /app/node_modules        # keep node_modules inside container only
     ports:
       - "3000:3000"
-    command: sh -c "npm install --legacy-peer-deps && npm run dev -- --hostname 0.0.0.0 --port 3000"
+    command: sh -c "npm install --legacy-peer-deps --no-package-lock && npm run dev -- --hostname 0.0.0.0 --port 3000"
