--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   web:
     image: node:18-alpine
+    container_name: amazon-clone
     working_dir: /app
     volumes:
       - ./:/app
