--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ version: "3.8"
 services:
   web:
     image: node:18-alpine
-    container_name: amazon-clone
+    container_name: amazon_clone_web
     working_dir: /app
     volumes:
       - ./:/app
-      - /app/node_modules        # keep node_modules inside container only
+      - /app/node_modules  # keeps node_modules inside container only
     ports:
       - "3000:3000"
-    command: sh -c "npm install --legacy-peer-deps --no-package-lock && npm run dev -- --hostname 0.0.0.0 --port 3000"
+    command: sh -c "
+      npm install --legacy-peer-deps --no-package-lock &&
+      npm outdated || true &&
+      npm run dev -- --hostname 0.0.0.0 --port 3000
+    "
