--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,4 @@ services:
     command: sh -c "
       npm install --legacy-peer-deps --no-package-lock &&
       npm outdated || true &&
-      npm run dev -- --hostname 0.0.0.0 --port 3000
-    "
+      npm run dev -- --hostname 0.0.0.0 --port 3000"
