--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,4 @@ services:
       echo '📦 Checking for outdated packages...' &&
       npm outdated || true &&
       echo '🚀 Starting dev server...' &&
-      npm run dev -- --host 0.0.0.0 --port 3000
-    "
+      npm run dev -- --host 0.0.0.0 --port 3000"
