--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,55 @@
-version: "3.8"
+# version: "3.8"
 
+# services:
+#   web:
+#     image: node:18-alpine
+#     container_name: amazon-clone
+#     working_dir: /app
+#     volumes:
+#       - ./:/app
+#       - /app/node_modules
+#     ports:
+#       - "3000:3000"
+#     command: sh -c "
+#       npm install --legacy-peer-deps --no-package-lock &&
+#       echo '📦 Checking for outdated packages...' &&
+#       npm outdated || true &&
+#       echo '🚀 Starting dev server...' &&
+#       npm run dev -- --host 0.0.0.0 --port 3000"
+
+
+
+version: "3.8"
 services:
-  web:
-    image: node:18-alpine
-    container_name: amazon-clone
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8081:8080" # Traefik dashboard
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  amazonclone:
+    image: node:18
     working_dir: /app
     volumes:
       - ./:/app
       - /app/node_modules
-    ports:
-      - "3000:3000"
     command: sh -c "
       npm install --legacy-peer-deps --no-package-lock &&
       echo '📦 Checking for outdated packages...' &&
       npm outdated || true &&
       echo '🚀 Starting dev server...' &&
       npm run dev -- --host 0.0.0.0 --port 3000"
+    labels:
+      - "traefik.http.routers.amazon.rule=Host(`amazon.localhost`)"
+      - "traefik.http.services.amazon.loadbalancer.server.port=3000"
+    depends_on:
+      - traefik
+
+
+
