--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,21 +18,7 @@
 #       npm run dev -- --host 0.0.0.0 --port 3000"
 
 
-
-version: "3.8"
 services:
-  traefik:
-    image: traefik:v2.10
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8081:8080" # Traefik dashboard
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
   amazonclone:
     image: node:18
     working_dir: /app
@@ -46,10 +32,21 @@ services:
       echo '🚀 Starting dev server...' &&
       npm run dev -- --host 0.0.0.0 --port 3000"
     labels:
-      - "traefik.http.routers.amazon.rule=Host(`amazon.localhost`)"
-      - "traefik.http.services.amazon.loadbalancer.server.port=3000"
-    depends_on:
-      - traefik
+      - "traefik.enable=true"
+      - "traefik.http.routers.amazonclone.rule=Host(`localhost`)"
+      - "traefik.http.services.amazonclone.loadbalancer.server.port=3000"
+
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"        # App accessible on http://localhost
+      - "8081:8080"    # Traefik dashboard
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
 
 
